--- a/ecmc-ui/.env.development
+++ b/ecmc-ui/.env.development
@@ -9,10 +9,10 @@ VITE_PUBLIC_PATH = /
 VITE_DROP_CONSOLE = false
 
 # 基础接口地址
-VITE_GLOB_API_URL=http://43.139.72.250:3000
+VITE_GLOB_API_URL=http://localhost:3000
 
 # 文件上传接口地址
-VITE_GLOB_UPLOAD_URL=http://43.139.72.250:3000/attach/upload
+VITE_GLOB_UPLOAD_URL=http://localhost:3000/attach/upload
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX=
