--- a/ecmc-ui/package.json
+++ b/ecmc-ui/package.json
@@ -35,117 +35,117 @@
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons-vue": "^6.1.0",
     "@iconify/iconify": "^2.2.1",
-    "@logicflow/core": "^1.1.13",
-    "@logicflow/extension": "^1.1.13",
-    "@vue/runtime-core": "^3.2.33",
-    "@vue/shared": "^3.2.33",
-    "@vueuse/core": "^8.3.0",
-    "@vueuse/shared": "^8.3.0",
-    "@zxcvbn-ts/core": "^2.0.1",
-    "ant-design-vue": "^3.2.0",
+    "@logicflow/core": "^1.2.13",
+    "@logicflow/extension": "^1.2.14",
+    "@vue/runtime-core": "^3.3.4",
+    "@vue/shared": "^3.3.4",
+    "@vueuse/core": "^8.9.4",
+    "@vueuse/shared": "^8.9.4",
+    "@zxcvbn-ts/core": "^2.2.1",
+    "ant-design-vue": "^3.2.20",
     "axios": "^0.26.1",
-    "codemirror": "^5.65.3",
-    "cropperjs": "^1.5.12",
+    "codemirror": "^5.65.15",
+    "cropperjs": "^1.6.0",
     "crypto-js": "^4.1.1",
-    "dayjs": "^1.11.1",
-    "echarts": "^5.3.2",
+    "dayjs": "^1.11.9",
+    "echarts": "^5.4.3",
     "intro.js": "^5.1.0",
-    "jsencrypt": "^3.3.1",
+    "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
-    "path-to-regexp": "^6.2.0",
-    "pinia": "2.0.12",
+    "path-to-regexp": "^6.2.1",
+    "pinia": "^2.0.12",
     "print-js": "^1.6.0",
-    "qrcode": "^1.5.0",
-    "qs": "^6.10.3",
+    "qrcode": "^1.5.3",
+    "qs": "^6.11.2",
     "resize-observer-polyfill": "^1.5.1",
     "showdown": "^2.1.0",
     "sortablejs": "^1.15.0",
-    "tinymce": "^5.10.3",
-    "vditor": "^3.8.13",
-    "vue": "^3.2.33",
-    "vue-i18n": "^9.1.9",
-    "vue-json-pretty": "^2.0.6",
-    "vue-router": "^4.0.14",
-    "vue-types": "^4.1.1",
+    "tinymce": "^5.10.7",
+    "vditor": "^3.9.5",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.3.0",
+    "vue-json-pretty": "^2.2.4",
+    "vue-router": "^4.2.4",
+    "vue-types": "^4.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@iconify/json": "^2.1.30",
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@iconify/json": "^2.2.114",
     "@purge-icons/generated": "^0.8.1",
-    "@types/codemirror": "^5.60.5",
-    "@types/crypto-js": "^4.1.1",
+    "@types/codemirror": "^5.60.10",
+    "@types/crypto-js": "^4.1.2",
     "@types/fs-extra": "^9.0.13",
-    "@types/inquirer": "^8.2.1",
+    "@types/inquirer": "^8.2.6",
     "@types/intro.js": "^3.0.2",
-    "@types/lodash-es": "^4.17.6",
-    "@types/mockjs": "^1.0.6",
-    "@types/node": "^17.0.25",
+    "@types/lodash-es": "^4.17.9",
+    "@types/mockjs": "^1.0.7",
+    "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.0",
-    "@types/qrcode": "^1.4.2",
-    "@types/qs": "^6.9.7",
+    "@types/qrcode": "^1.5.2",
+    "@types/qs": "^6.9.8",
     "@types/showdown": "^1.9.4",
-    "@types/sortablejs": "^1.10.7",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vitejs/plugin-legacy": "^1.8.1",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@types/sortablejs": "^1.15.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-legacy": "^1.8.2",
+    "@vitejs/plugin-vue": "^2.3.4",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vue/compiler-sfc": "^3.2.33",
-    "@vue/test-utils": "^2.0.0-rc.21",
-    "autoprefixer": "^10.4.4",
+    "@vue/compiler-sfc": "^3.3.4",
+    "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.15",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
-    "cz-git": "^1.3.9",
-    "czg": "^1.3.9",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-define-config": "^1.12.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.6.0",
+    "cz-git": "^1.7.1",
+    "czg": "^1.7.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-define-config": "^1.23.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^8.7.1",
     "esno": "^0.14.1",
     "fs-extra": "^10.1.0",
     "husky": "^7.0.4",
-    "inquirer": "^8.2.2",
-    "less": "^4.1.2",
-    "lint-staged": "12.3.7",
+    "inquirer": "^8.2.6",
+    "less": "^4.2.0",
+    "lint-staged": "^12.3.7",
     "npm-run-all": "^4.1.5",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.12",
-    "postcss-html": "^1.4.1",
+    "postcss": "^8.4.29",
+    "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.2",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "stylelint": "^14.7.1",
-    "stylelint-config-prettier": "^9.0.3",
+    "rollup": "^2.79.1",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended": "^7.0.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.16",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-mkcert": "^1.6.0",
-    "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-purge-icons": "^0.8.1",
+    "vite-plugin-mkcert": "^1.16.0",
+    "vite-plugin-mock": "^2.9.8",
+    "vite-plugin-purge-icons": "^0.8.2",
     "vite-plugin-pwa": "^0.11.13",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-theme": "^0.8.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vite-plugin-windicss": "^1.8.4",
+    "vite-plugin-windicss": "^1.9.1",
     "vue-eslint-parser": "^8.3.0",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.8.10"
   },
   "resolutions": {
     "bin-wrapper": "npm:bin-wrapper-china",
