--- a/ecmc-biz/src/main/resources/config/application-redis.yml
+++ b/ecmc-biz/src/main/resources/config/application-redis.yml
@@ -4,7 +4,7 @@ spring:
     # Redis数据库索引（默认为0）
     database: 0
     # Redis服务器地址
-    host: localhost
+    host: 43.131.245.110
     # Redis服务器连接端口43.131.245.110
     port: 6379
     # Redis服务器连接密码（默认为空）
